<resources>
    <string name="app_name">QuarterMaster</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout_button">LogOut</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="register_button">Register</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here</string>
    <string name="login_button">Login</string>
    <string name="new_here_create_an_account">New Here? Create an Account</string>
    <string name="reset_password">Get password reset email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string-array name="ListofItems">
        <item>Phone</item>
        <item>Laptop</item>
        <item>Chair</item>
        <item>Desk</item>
        <item>Computer</item>
        <item>Server</item>
    </string-array>
    <string-array name="RepairStatusList">
        <item>Working</item>
        <item>Broken</item>
        <item>Being Repaired</item>
    </string-array>
    <string name="title_activity_home_pageqm">HomePageqm</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="owner_name">Owner Name</string>
    <string name="make">Make</string>
    <string name="quartermaster_logo">QuarterMaster Logo</string>
    <string name="qrscanner">Qr-Scanner</string>
    <string name="profile">Profile</string>
    <string name="create_item">Create Item</string>
    <string name="devices">Devices</string>
    <string name="logout">Logout</string>
    <string name="select_item_type">Select Item Type</string>
    <string name="login_page">Login Page</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="id_list">ID List</string>
    <string name="enter_item_id">Enter Item ID</string>
    <string name="search">Search</string>
    <string name="specific_item_info">Specific Item Info</string>
    <string name="generate">Generate</string>
    <string name="scan">Scan</string>
    <string name="quantity">Quantity</string>
    <string name="filter">Filter</string>
    <string name="extra_info">Extra Info</string>
    <string name="edit_item">Edit Item</string>
    <string name="itemid">ItemID</string>
    <string name="qrgeneration">Qr-Generation</string>
    <string name="save_as_jpeg">Save as Jpeg</string>
    <string name="qractions">QrActions</string>
    <string name="repair_status">Repair Status</string>
    <string name="delete_item">Delete Item</string>
</resources>