<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".HomePage">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/ericsson"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/quartermaster_logo"
        android:src="@drawable/logo200x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_menu"
        android:baselineAligned="false"
        app:layout_constraintBottom_toTopOf="@+id/bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="24dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/toQr"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/bg_blue"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/qractions"
                        android:gravity="center"
                        android:maxWidth="64dp"
                        android:maxHeight="64dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/qrcode" />
                </LinearLayout>

                <TextView
                    android:layout_width="146dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ericsson"
                    android:gravity="center"
                    android:text="@string/qractions"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/toProfile"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/bg_blue"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/profile"
                        android:gravity="center"
                        android:maxWidth="64dp"
                        android:maxHeight="64dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/account" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ericsson"
                    android:gravity="center"
                    android:text="@string/profile"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/toItems"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/bg_blue"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/create_item"
                        android:maxWidth="64dp"
                        android:maxHeight="64dp"
                        android:src="@drawable/phonelaptop" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ericsson"
                    android:gravity="center"
                    android:text="@string/devices"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="@color/zxing_transparent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginStart="57dp"
        android:layout_marginEnd="55dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/appName" />


</androidx.constraintlayout.widget.ConstraintLayout><!--QR options text for button-->
    <!--    <TextView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="8dp"-->
    <!--        android:layout_marginTop="28dp"-->
    <!--        android:layout_marginEnd="8dp"-->
    <!--        android:fontFamily="@font/ericsson"-->
    <!--        android:text="QR options"-->
    <!--        android:textColor="@color/white"-->
    <!--        android:textSize="22sp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.496"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/imageView"/>-->